# pgdocs-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  scrape_docs.py  search_index.py  server.py  setup.sh  test_pgdocs.py
