[project]
name = "pgdocs-mcp"
version = "0.1.0"
description = "MCP server for PostgreSQL 18 and PostGIS documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "rapidfuzz>=3.10.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
scrape = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
]
dev = [
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
